# src/routes/concertRoutes.js
@@ -2,6 +2,7 @@ import { Router } from 'express'
 import {
   createConcert,
   deleteConcert,
+  getCancelledConcerts,
   getConcertById,
   getConcerts,
   updateConcert
@@ -12,6 +13,7 @@ import { validateObjectId } from '../middleware/validateObjectId.js'
 const concertRouter = Router()
 
 concertRouter.get('/', getConcerts)
+concertRouter.get('/history/cancellations', getCancelledConcerts)
 concertRouter.get('/:id', validateObjectId, getConcertById)
 concertRouter.post('/', uploadImage.single('image'), createConcert)
 concertRouter.put(
